# Lyryc

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  TrackNameCleaner.prompt.yml  index.html  model_performance_results.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts  websocket_test.html  websocket_test.js  youtube-music-source.html
.claude/agents/: fullstack-desktop-extension-engineer.md
alignment/: README.md
extension/: apple-music-detector.js  background.js  manifest.json  popup.html  popup.js  soundcloud-detector.js  spotify-detector.js  youtube-detector.js
model_tester/: Cargo.toml  README.md
model_tester/src/: main.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  lyrics.rs  main.rs  track_cleaning.rs  types.rs  websocket.rs  websocket_commands.rs  window_management.rs
src/components/: AlignmentTester.tsx  CleanLyricDisplay.tsx  LyricsDisplay.tsx  LyricsViewer.tsx  MediaControls.tsx  OffsetControls.tsx  StyleControls.tsx
src/hooks/: useCurrentTime.ts  useSmoothTime.ts
src/services/: alignment.ts  audioSync.ts  cacheManager.ts  lrclib.ts  lrclibClient.ts  lyricsProcessor.ts  lyricsTiming.ts  textAlign.ts
src/stores/: lyricsStore.ts  (+4 more)
tests/: LyricCleanData.csv  getLineDuration.test.ts  improvedWordHighlighting.test.ts  lineProgressDuration.test.ts  lrclib_alignment.test.ts  progressSynchronization.test.ts  wordHighlighting.test.ts  wordHighlightingSpeed.test.ts  wordSegmentation.test.ts  wordTiming.test.ts
(+2 files in other folders)
