[package]
name = "model_performance_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"