[package]
name = "lyryc"
version = "0.1.0"
description = "A music lyrics synchronization desktop app"
authors = ["cato"]
edition = "2021"

[lib]
name = "lyryc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
urlencoding = "2"
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
